rabbitmq-blue/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axd-mq-server
  labels:
    app: axd-mq-server
    version: v3
spec:
  ports:
    - name: axd-mq-server-svc-15672-15672
      port: 15672
      protocol: TCP
      targetPort: 15672
    - name: axd-mq-server-svc-25672-25672
      port: 25672
      protocol: TCP
      targetPort: 25672
    - name: axd-mq-server-svc-4369-4369
      port: 4369
      protocol: TCP
      targetPort: 4369
    - name: axd-mq-server-svc-5671-5671
      port: 5671
      protocol: TCP
      targetPort: 5671
    - name: axd-mq-server-svc-5672-5672
      port: 5672
      protocol: TCP
      targetPort: 5672
  selector:
    app: axd-mq-server
  type: ClusterIP
